  to targets in that module with Module.targetRef(String) and
  Module.targetRefs(String*).
* Module() and Modules() now return a Module resp. Seq[Module].
* Deprecated Module.apply(String*) as the return value differs from
  Module.apply(String), which is not obvious. Use Modules.apply() instead.
* Build script compiler now emits deprecation warnings.

SBuild 0.3.2 - 2013-01-26

* Common scheme handlers (mvn, http, zip) are now registered by default, but
  can be overridden as usual.
* All by-default registered scheme handler can now be used in @classpath and
  @include elements.
* Changed behavior of --version command line option. It now exists the 
  application as expected.
* Added new AntZipFileSet for conveniene when using AntZip.
* Added new ScalaRepl addon providing access to the interactive Scala console.
* Fixed issues in parser for @classpath and @include.

SBuild 0.3.1 - 2013-01-17

* Added ability to translate/resolve (any) target ref(s) to files.
* Changed default to not use fsc when compiling build files and added new
  commandline option "--fsc" to enable fsc.
* Pathes and file dependencies pointing to symbolic links will be no longer
  implicitly resolved.
* ZipSchemeHandler: Fixed up-to-date detected issue, when a ZIP entry gets
  always reextracted.
* ZipSchemeHandler: Fixed bug, where extraction of files, that don't exists in
  ZIP file, were silently ignored.
* New BndJar Addon to generate OSGi Bundles based on bndlib.
* Fixed Windows start script.

SBuild 0.3.0 - 2013-01-04

* SBuild is now based on Scala 2.10
* ZipSchemeHandler: Fixed issue with fail of unpacking of some zip files.
* New Scalac Addon which is independent of SBuild Scalac Runtime. Thus, it is
  now possible to compile for Scala versions different than SBuild's one.
* ScalaTest Addon: Added fork option.

SBuild 0.2.0 - 2012-11-08

* A buildfile can now include other scala files. Added @include to share common
  configuration and functionality.