@@ -18,6 +18,8 @@ SBuild 0.3.2.9000
 * Deprecated Module.apply(String*) as the return value differs from
   Module.apply(String), which is not obvious. Use Modules.apply() instead.
 * Build script compiler now emits deprecation warnings.
+* SBuild now has slightly colored output based on jansi.fusesource.org, which
+  can be disabled with --no-color commandline option.
 
 SBuild 0.3.2 - 2013-01-26
 
